--- a/Back/TimeSheet/src/main/resources/application.properties
+++ b/Back/TimeSheet/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/newdb25
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.defer-datasource-initialization = true
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
