--- a/TimeSheet-front/package.json
+++ b/TimeSheet-front/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
     "jquery": "^3.6.0",
     "ngx-toastr": "^14.2.1",
     "popper.js": "^1.16.1",
@@ -33,6 +34,7 @@
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.9",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
